# Eaty

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/myeaty/: DatabaseIntegrationTest.java  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: MyEaty.db
app/src/main/cpp/: CMakeLists.txt  DataBaseBridge.cpp  RationManager.cpp  RationManager.h  RecipeManager.cpp  RecipeManager.h  native-lib.cpp
app/src/main/cpp/build-tests/: CMakeCache.txt
app/src/main/cpp/sqlite/: SQLiteOpenHelper.cpp
app/src/main/java/: Product.kt
app/src/main/java/com/example/myeaty/: ActivLvlActivity.kt  DateActivity.kt  DatebaseHelper.kt  DnevnikActivity.kt  EditProfileActivity.kt  KBJU.kt  LoginActivity.kt  MainActivity.kt  NativeLib.kt  PasswordActivity.kt  Product.java  Product.kt  Products.kt  RationActivity.kt  RationDetailActivity.kt  RecipeActivity.kt  RecipeDetailActivity.kt  SQLBridge.kt  UserData.kt  UserProfile.java  UserProfileK.kt  WelcomeActivity.kt
app/src/main/res/drawable/: bg_edittext_rounded.xml  bg_gradient.xml  bg_kbju_border.xml  bg_meal_input.xml  bg_ration_button.xml  bg_ration_card.xml  dialog_add_product.xml
app/src/main/res/layout/: activity_activ_lvl.xml  activity_date.xml  activity_dnevnik.xml  activity_edit_profile.xml  activity_login.xml  activity_main.xml  activity_password.xml  activity_ration_activity.xml  activity_ration_detail.xml  activity_recipe.xml  activity_recipe_detail.xml  activity_welcome.xml  dialog_add_custom_product.xml  dialog_add_product.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  refs.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myeaty/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
